--- a/themes/Sanctuary Watch/style.css
+++ b/themes/Sanctuary Watch/style.css
@@ -1,15 +1,47 @@
 /*
-Theme Name: Sanctuary Watch
-Template: developry-lite
+Theme Name: Sanctuary Watch 
 */
 
 #top-bar {
-    background-color: white;
-    text-align: center;
-    padding: 5px;
+  background-color: white;
+  text-align: center;
+  padding: 5px;
 }
 
 #top-bar img {
-    max-width: 22.5%;
-    height: auto;
+  max-width: 100%;
+  height: 35px;
+  margin: 10px;
+}
+
+#ioos-breadcrumb {
+  background-color: #008da8;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  text-align: center;
+  align-items: center;
+  color: white;
+  min-height: 25.98px;
+}
+
+#header-margin a,
+#header-margin p {
+  display: inline;
+  margin: 0;
+  color:white;
+  text-decoration: none;
+}
+
+.footer {
+  background-color: #020e38;
+  background-image: url(https://ioos.us/images/bg_footer.png);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
