--- a/plugins/webcr/admin/css/webcr-admin.css
+++ b/plugins/webcr/admin/css/webcr-admin.css
@@ -24,3 +24,12 @@
     margin-left: 50px; 
     font-size:16px;
   }
+
+  h4 {
+    font-weight: 500;
+    font-size: 15px;
+  }
+
+  body {
+    background: #f0f0f1;
+  }
