working on pages, no dropdowns working

--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -78,4 +78,9 @@ p[itemprop="name"], p[itemprop="address"] {
   top: 0;
   width: 100%;
   z-index: 100;
+  margin-bottom: 20px;
+}
+
+.navbar-emblem {
+  size: 10%;
 }
