--- a/plugins/webcr/admin/css/webcr-admin.css
+++ b/plugins/webcr/admin/css/webcr-admin.css
@@ -38,3 +38,16 @@
     max-width: 100%; /* Set SVG width to 100% of container */
     height: auto; /* Allow height to adjust proportionally */
   }
+
+  .sceneTagline {
+    font-style: italic;
+  }
+
+  .highlightIcons {
+    stroke: "yellow";
+    stroke-width: 3;
+  }
+
+  .thirdPreviewRow {
+    padding-top: 10px;
+  }
