--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -3,8 +3,6 @@ Theme Name: Sanctuary Watch
 */
 
 @import url('assets/css/bootstrap.css');
-
-
 #top-bar {
   background-color: white;
   text-align: center;
@@ -110,4 +108,51 @@ p[itemprop="name"], p[itemprop="address"] {
 .toc-link:hover {
   text-decoration: underline;
 }
+/* #svg1 img {
+  width: 100%; 
+  height: 100%;
+  object-fit: contain;
+} */
+  
+  .responsive-image-container {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .responsive-image-container img,
+  .responsive-image-container svg {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+
+  #toc1 {
+    position: sticky;
+    top: 20px; /* Adjust this value as needed */
+  }
+
+  @media (min-width: 992px) {
+    .responsive-image-container {
+      width: auto;
+      max-width: none;
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .responsive-image-container img,
+    .responsive-image-container svg {
+      max-width: 90%; /* Start shrinking a bit earlier */
+    }
+  }
+
+  @media (max-width: 991px) {
+    .responsive-image-container img,
+    .responsive-image-container svg {
+      max-width: 100%; /* Full width on smaller screens */
+    }
+  }
+
 
