--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -130,8 +130,7 @@ p[itemprop="name"], p[itemprop="address"] {
   }
 
   #toc1 {
-    position: sticky;
-    top: 20px; /* Adjust this value as needed */
+    top: 20px; /
   }
 
   @media (min-width: 992px) {
