tabs implemented -- need to add appropriate plots/info to each tab

--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -156,6 +156,10 @@ p[itemprop="name"], p[itemprop="address"] {
   }
 
 
-  /* .nav-link {
-    color: black ;
-} */
+.nav-tabs .nav-link {
+    color: black; /* Default color for non-active tabs */
+}
+.nav-tabs .nav-link.active {
+    color: black; /* Color for active tab */
+}
+
