--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -200,7 +200,7 @@ p[itemprop="name"], p[itemprop="address"] {
   /* padding: 10px; */
   /* margin: 0.25px; */
   background-color: #d8dbe3;
-  transform: scale(0.95);
+  transform: scale(0.9);
   max-width: 100%; 
   max-height: 100%; 
   width: 120px; 
@@ -217,6 +217,7 @@ p[itemprop="name"], p[itemprop="address"] {
   max-height: 100%; 
 
   /* transform: scale(1.55); */
+  /* transform: scale(0.9); */
   transform-origin: center;
   object-fit: contain;
   /* transform: scale(1.5); Adjust scale as needed */
