hacky fix for formatting issue + some instance stuff

--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -388,4 +388,8 @@ input:checked + .slider:before {
 #myModal > div > div > div.modal-body{
   min-width: 300px;
 }
+
+#mobile-view-image{
+  transform: scale(0.9);
+}
 }
