--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -81,6 +81,7 @@ p[itemprop="name"], p[itemprop="address"] {
   margin-bottom: 20px;
 }
 
+
 .navbar-emblem {
   size: 10%;
 }
@@ -395,7 +396,7 @@ input:checked + .slider:before {
 }
 
 
-#more-info-header-1 > button{
+/* #more-info-header-1 > button{
   max-height: 40px;
 }
 
@@ -427,7 +428,7 @@ input:checked + .slider:before {
 #accordion-collapse-2{
   margin-top: -4%;
   margin-bottom: -4%;
-}
+} */
 
 #title-container > div > div.col-md-10 > p{
   max-width: 75%;
@@ -437,3 +438,31 @@ input:checked + .slider:before {
   padding-top: 5%;
 }
 
+
+
+
+
+@media (min-width: 512px) {
+  .navbar-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      max-width: 1100px; 
+      margin: 0 auto;
+  }
+
+  .navbar-nav {
+      flex-direction: row;
+  }
+
+  .nav-item {
+      padding: 0 10px;
+  }
+}
+
+/* @media (max-width: 768px){
+  body > nav > div > div > button{
+    margin-left: 220px;
+  }
+} */
