--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -442,14 +442,16 @@ input:checked + .slider:before {
 
 
 
-@media (min-width: 512px) {
+@media (min-width: 1000px) {
   .navbar-wrapper {
       display: flex;
+      position: relative;
       justify-content: center;
       align-items: center;
-      width: 100%;
-      max-width: 1100px; 
+      /* width: 100%; */
+      max-width: 1000px; 
       margin: 0 auto;
+      
   }
 
   .navbar-nav {
