--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -169,9 +169,9 @@ body > h1{
   /* Ensure the table of contents stays aligned */
   #toc-container {
     flex: 0 0 25%;
-    max-width: 25%;
+    /* max-width: 25%; */
     position: relative;
-    padding-right: 10%;
+    /* padding-right: 10%; */
   }
 
   #toc1 {
@@ -497,7 +497,7 @@ body > nav > div > div{
   max-width: 87%;
 }
 
-
+/* 
 @media (min-width: 512px) and (max-width: 768px) {
   #toc-container{
     margin-left: 0px !important;
@@ -527,4 +527,4 @@ body > nav > div > div{
   #toc-group{
     padding-top: 2%;
   }
-}
+} */
