--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -364,11 +364,15 @@ input:checked + .slider:before {
   .modal-dialog {
     min-width: 30%;
     max-width: 50%;
+    transform: scale(1.3); /* thought it'd be better to scale size instead of just max width; essentially a max width of 65% */
+    transform-origin: top center;
   }
+  
   #tagline-container{
     max-width: 100%;
     min-width: 300px;
     /* margin-left: 10%; */
+    
   }
   #accordion-container{
     max-width: 40%;
