--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -129,7 +129,7 @@ body > h1{
 
 /* Apply flexbox layout only for PC/tablet views */
 /* changed from 768 to 1000, change back if it gets screwed up */
-@media (min-width: 768px) { 
+@media (min-width: 769px) { 
   .container-fluid {
     display: flex;
     flex-wrap: nowrap;
@@ -146,8 +146,19 @@ body > h1{
   /* Column styling */
   .col-md-9, .col-md-3 {
     flex: 0 0 auto;
+    /* margin-left: -8%; */
   }
-
+  #title-container > div > div.col-md-8 > p{
+    max-width: 85%;
+    position: relative;
+    left: -28px;
+  }
+  #title-container > div > div.col-md-4{
+    position: relative;
+    left: -45px;
+    /* width: 30%; */
+    max-width: 28%;
+  }
   /* Responsive image container */
   .responsive-image-container {
     width: 90%;
@@ -363,10 +374,24 @@ input:checked + .slider:before {
 @media (min-width: 900px) {
   .modal-dialog {
     min-width: 30%;
-    max-width: 50%;
-    transform: scale(1.3); /* thought it'd be better to scale size instead of just max width; essentially a max width of 65% */
+    max-width: 70%;
+    /* transform: scale(1.3);  */
+    /* thought it'd be better to scale size instead of just max width; essentially a max width of 65% */
     transform-origin: top center;
+    margin: 0 auto; 
   }
+  /* #CA_Sheephead-1-pane > div:nth-child(4){
+    width: 100% !important; 
+    height: auto; 
+    display: block; 
+    margin: 0;
+  }
+  #CA_Sheephead-1-pane > div:nth-child(4) > img{
+    width: 100% !important; 
+    height: auto; 
+    display: block;
+    margin: 0;
+  } */
   
   #tagline-container{
     max-width: 100%;
