--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -615,3 +615,19 @@ button:focus,
   font-size: large;
   padding-left: 0.5rem;
 }
+
+#plotly-plot {
+  width: 100% !important;
+  height: 100% !important;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#plotly-plot > div{
+  width: 80% !important;
+  height: 80% !important;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
