--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -550,7 +550,7 @@ input:checked + .slider:before {
 }
 
 #title-container > div > div.col-md-10 > p{
-  max-width: 75%;
+  max-width: 85%;
 }
 
 #toc-group{
@@ -907,4 +907,8 @@ font-size: large; */
 
   
 
+}
+
+body > nav > div{
+  background-color: #03386c;
 }
