about page updates

--- a/plugins/webcr/admin/css/webcr-admin.css
+++ b/plugins/webcr/admin/css/webcr-admin.css
@@ -123,20 +123,23 @@
   }
 
   /* Hide some TinyMCE button options within Figure editing screens. VERY HACKY - FIX   */
+  /*
   .mce-toolbar .mce-btn-group .mce-btn.mce-listbox {
     display: none;
   }
-
+*/
   /* Hide some TinyMCE button options within Figure editing screens - short caption. VERY HACKY - FIX   */
+  /*
  #mceu_3,  #mceu_4, #mceu_5, #mceu_6, #mceu_7, #mceu_8, #mceu_10, #mceu_11, #mceu_12 {
   display: none;
 }
-
+*/
   /* Hide some TinyMCE button options within Figure editing screens - long caption. VERY HACKY - FIX   */
+  /*
   #mceu_64,  #mceu_65, #mceu_66, #mceu_67, #mceu_68, #mceu_69, #mceu_71, #mceu_72, #mceu_73 {
     display: none;
   }
-
+*/
     /* Formatting for figure preview */
 
 .figure_preview {
