mobile order icon order fixed, now need to add sectiosn for mobile view as well

--- a/themes/Sanctuary_Watch/style.css
+++ b/themes/Sanctuary_Watch/style.css
@@ -872,7 +872,9 @@ font-size: large; */
 @media (min-width: 769px) {  /* a bunch of new stuff here for updated formatting */
   #title-container > div > div.col-md-2{
     width: 21%;
-    margin-left: 71.4%;
+    /* margin-left: 71.4%; */
+    margin-left: -31%;
+
   }
   #title-container > div > div.col-md-2 > div{
     margin-top: 2%;
