--- a/plugins/webcr/admin/css/webcr-admin.css
+++ b/plugins/webcr/admin/css/webcr-admin.css
@@ -181,6 +181,12 @@
   margin-top: 10px;
 }
 
+.figureTitle{
+  font-size: 15px;
+  margin-bottom: 5px;
+  text-align: left;
+}
+
 .captionOptions{
   font-size: 15px;
 }
